[package]
name = "deepnsm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

# Empty `[workspace]` so cargo treats this crate as standalone when invoked
# via `--manifest-path` (deepnsm is `exclude`d from the parent workspace,
# but in nested git-worktree directories cargo's auto-discovery would
# otherwise walk further up and pick up the outer workspace root).
[workspace]
description = """
DeepNSM: Distributional semantic transformer replacement.
4,096 words × 12 bits × 8MB distance matrix = complete semantic engine.
O(1) per word, O(n) per sentence, deterministic, bit-reproducible.
No GPU. No learned weights. Same decision boundaries as cosine.
"""

# Zero EXTERNAL (crates.io) dependencies — for supply-chain cleanness.
# AdaWorldAPI path deps are mandatory and compile into the same binary.
# ndarray is the canonical SIMD/BLAS/CLAM provider: ndarray::simd is a
# LazyLock CPU detect that dispatches to simd_avx512.rs / simd_avx2.rs /
# simd_amx.rs based on hardware. This crate USES exported types like
# F32x16 via their public Add/Sub/Mul impls and mul_add primitive; it
# never touches backend optimization files.
[features]
default = []
contract-ticket = []
grammar-triangle = ["dep:lance-graph-cognitive"]

[dependencies]
ndarray = { path = "../../../ndarray", default-features = false, features = ["std"] }
# `lance-graph-contract` is now a hard dep: markov_bundle imports the canonical
# RoleKeySlice constants (SUBJECT_SLICE..) from `grammar::role_keys` so that
# slice coordinates are unified with the rest of the workspace (CRITICAL fix
# from PR #279 review — the equal-partition 16384/5 layout in markov_bundle
# disagreed with the domain-specific widths in role_keys).
lance-graph-contract = { path = "../lance-graph-contract" }
lance-graph-cognitive = { path = "../lance-graph-cognitive", optional = true }

[dev-dependencies]
