[package]
name = "helix"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Place/Residue encoding: golden-spiral hemisphere placement, Fisher-Z aligned, into L1-metric-safe 256-palette endpoint pairs — the orthogonal RESIDUE companion to the HHTL PLACE"

# Standalone crate (own [workspace] + root `exclude`) but NOT dependency-free:
# ndarray (the AdaWorldAPI fork = "The Foundation") is a MANDATORY dependency.
# helix's batch hot path (src/simd.rs) runs on `ndarray::simd`, and per the stack
# rule "ndarray is mandatory for lance-graph" it is a hard dep, not an opt-in.
[dependencies]
# MANDATORY ndarray (the AdaWorldAPI fork). Sourced by GIT, not a local path: a
# local *path* dep forces Cargo to read the sibling manifest during resolution,
# so a clean checkout without the sibling fails (codex P2 on #460); a git source
# resolves the manifest remotely. `master` is the commit helix was tested against.
# The fork is self-contained (internal subcrates only — no external path dep, no
# back-dependency on lance-graph → no import cycle). `std` enables `ndarray::simd`
# (simd_ln_f32 / F32x16 / U8x64).
ndarray = { git = "https://github.com/AdaWorldAPI/ndarray.git", branch = "master", default-features = false, features = ["std"] }

[dev-dependencies]

# The example IS the probe (workspace convention): runs the 2-D discrepancy
# proof + a demo encode/distance round-trip.
[[example]]
name = "prove_residue"

# Empty [workspace] so cargo treats this crate as standalone when invoked via
# --manifest-path (matches deepnsm); helix is also listed under the root
# Cargo.toml `exclude` so workspace-wide commands never pull it into the
# deterministic main compile graph.
[workspace]
