[package]
name = "holograph"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Holographic HDR Hamming — 10K/16K/32K bitpacked vector search with 3D XYZ superposition"
license = "AGPL-3.0"
authors = ["Holograph Contributors"]

[lib]
name = "holograph"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["simd", "datafusion-storage"]
simd = []
parallel = ["rayon"]
datafusion-storage = ["dep:datafusion", "dep:arrow", "dep:tokio"]
lancedb = ["dep:lance"]
ffi = []
full = ["simd", "parallel", "datafusion-storage", "lancedb", "ffi"]

[dependencies]
# Arrow ecosystem for columnar storage (v57 — aligned with DataFusion 51 / lance)
# Vectors stored as FixedSizeBinary with zero-copy access:
#   10K = 1256 bytes (157 words)
#   16K = 2048 bytes (256 words)
#   32K = 4096 bytes (512 words, 3D holographic)
arrow = { version = "57", features = ["ffi"], optional = true }
arrow-array = "57"
arrow-schema = "57"
arrow-buffer = "57"

# Query engine — DataFusion 51
datafusion = { version = "51", optional = true }

# Lance columnar format — 100x faster random access than Parquet
lance = { version = "2.0", optional = true, default-features = false }

# Async runtime
tokio = { version = "1.49", features = ["rt-multi-thread", "macros"], optional = true }
futures = "0.3"

# Error handling
thiserror = "2.0"

# Parallel processing
rayon = { version = "1.10", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Logging
log = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
tempfile = "3.14"
tokio = { version = "1.49", features = ["full"] }

[[bench]]
name = "hamming_bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = "thin"
