# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: Copyright The Lance Authors

[package]
name = "lance-graph-arm-discovery"
version = "0.1.0"
edition = "2021"
description = "Deterministic codebook-probe association-rule discovery (Aerial+ transcode) → NARS-truth SPO candidates"
license = "Apache-2.0"

# Standalone, zero-dependency crate — EXCLUDED from the workspace (see root
# Cargo.toml `exclude`), like bgz17 / deepnsm / bgz-tensor. Verified with:
#
#   cargo test --manifest-path crates/lance-graph-arm-discovery/Cargo.toml
#
# The discovery path is float-free and bitwise-deterministic (integer codebook
# distance, integer evidence counts). The similarity oracle is injected through
# the zero-dep `aerial::CodebookDistance` trait, so the real distance table
# (`bgz17::PaletteDistanceTable`, the BLASGraph splat top-k, or an HDR-popcount
# Hamming primitive) lives on the consumer side and this crate stays standalone.

[dependencies]
# none — std only.

[lib]
doctest = true
