# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: Copyright The Lance Authors

[package]
name = "lance-graph-arm-discovery"
version = "0.1.0"
edition = "2021"
description = "Deterministic codebook-probe association-rule discovery (Aerial+ transcode) → NARS-truth SPO candidates"
license = "Apache-2.0"

# Standalone, zero-dependency crate by default — EXCLUDED from the workspace
# (see root Cargo.toml `exclude`), like bgz17 / deepnsm / bgz-tensor. Verified
# with the DEFAULT (scalar, std-only) feature set:
#
#   cargo test --manifest-path crates/lance-graph-arm-discovery/Cargo.toml
#
# The discovery path is float-free and bitwise-deterministic (integer codebook
# distance, integer evidence counts, AND+popcount over row bitsets).

[features]
default = []
# Route the bitset AND+popcount primitive (`simd.rs`) through
# `ndarray::simd::U64x8` per `ndarray-vertical-simd-alien-magic.md`. Verified
# here: `cargo test/clippy --features ndarray-simd` → 33/33, clippy clean
# (ndarray builds as a path dep with default-features=false + std; the
# `ndarray-rand` workspace member is NOT pulled).
#
# TARGET-CPU: the U64x8 polyfill is CORRECT on any target but only emits the
# real vector kernels (AVX-512 VPOPCNTQ for popcnt, AMX for the matmul/VNNI
# paths) when built for native silicon. Build with
#   RUSTFLAGS="-C target-cpu=native"   (this machine), or
#   RUSTFLAGS="-C target-cpu=x86-64-v4"  (AVX-512 baseline)
# Without it the popcnt path is the scalar fused-loop fallback — same result,
# no SIMD speedup. The default (scalar) feature does not pull ndarray at all.
ndarray-simd = ["dep:ndarray"]

# D-ARM-14 Phase 2 worked example: the proposer→hub landing (splat → discovery →
# `dolce_id` + ndjson → land on the canonical hub types). Pulls the zero-dep
# `lance-graph-contract` (the exact `[dev-dependencies]` pattern `jc` uses for
# bridge examples) so `tests/wikidata_landing.rs` lands on the REAL
# `class_view::FieldMask` + `hash::fnv1a_str`. The lib stays zero-dep; this is
# off by default. Run: `cargo test --features landing --test wikidata_landing`.
landing = ["dep:lance-graph-contract"]

[dependencies.ndarray]
path = "../../../ndarray"
optional = true
default-features = false
# `std` gates `ndarray::simd` (the `U64x8` polyfill); that is all we need.
features = ["std"]

[dependencies.lance-graph-contract]
path = "../lance-graph-contract"
optional = true

[lib]
doctest = true
