[package]
name = "lance-graph-callcenter"
version = "0.1.0"
edition = "2021"
description = "External callcenter membrane over Lance + DataFusion (Supabase-shape API)"

# NEVER add: reqwest (client HTTP; we are the server), postgres, sqlx, pg-embed.
# All external HTTP/WS/SQL is replaced by Lance + DataFusion + axum.

[dependencies]
lance-graph-contract = { path = "../lance-graph-contract" }

# [persist] — Arrow RecordBatch + Lance dataset ops
arrow       = { version = "57", optional = true }
lance       = { version = "=4.0.0",  optional = true }

# [query] / [query-lite] — DataFusion. Base dep has default-features = false.
# The full `query` feature adds datafusion/default (compression backends etc).
# The `query-lite` feature gets logical plan + optimizer without compression,
# avoiding the xz2/liblzma `links = "lzma"` collision (lance v2 era; may be
# resolved with lance 4 + datafusion 52 — verify and remove if so).
datafusion  = { version = "52", optional = true, default-features = false, features = ["unicode_expressions"] }

# [realtime] — version watcher, Phoenix channel shapes, WebSocket
tokio            = { version = "1", features = ["sync"], optional = true }
tokio-tungstenite = { version = "0.24", optional = true }
serde            = { version = "1", features = ["derive"], optional = true }
serde_json       = { version = "1", optional = true }

# [serve] — axum WS server (implies realtime + query)
axum        = { version = "0.8", features = ["ws"], optional = true }
tower-http  = { version = "0.5", features = ["cors"], optional = true }

[features]
default  = []
persist  = ["dep:arrow", "dep:lance"]
query-lite = ["dep:datafusion", "dep:arrow"]
query    = ["query-lite", "datafusion/default"]
realtime = ["dep:tokio", "dep:tokio-tungstenite", "dep:serde", "dep:serde_json"]
serve    = ["realtime", "query", "dep:axum", "dep:tower-http"]
auth-jwt = ["dep:serde", "dep:serde_json"]
auth-rls-lite = ["auth-jwt", "query-lite"]
auth-rls = ["auth-jwt", "query"]
auth     = ["auth-rls"]
# LF-90 — append-only audit log skeleton (A3).
audit-log = []
# A-fix-audit forward-stub: enables `audit_from_plan(...)` helper that captures
# rewritten DataFusion LogicalPlans into AuditEntry. No-op alias today; will
# pull in `dep:datafusion` once the helper has a concrete consumer.
datafusion-plan = ["query-lite"]
# DM-8 — PostgREST stub uses a dependency-free hand-rolled JSON writer; the
# feature flag turns the module on without dragging serde in.
postgrest = []
# A-fix-postgrest forward-stub: enables `parsed_query_to_plan(...)` ParsedQuery
# → DataFusion LogicalPlan compiler. Wired in the follow-up dispatcher PR.
datafusion-dispatch = ["query-lite"]
# A4 plugin slots. Each is independently activatable; the `with_*` builder on
# `MembraneRegistry` is gated on the slot feature plus the underlying module
# feature (so e.g. enabling `membrane-plugins-rls` without an RLS feature is
# a no-op rather than a compile error).
membrane-plugins-rls = []
membrane-plugins-audit = ["audit-log"]
full     = ["persist", "query", "realtime", "serve", "auth", "audit-log", "postgrest", "membrane-plugins-rls", "membrane-plugins-audit"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
