[package]
name = "lance-graph-contract"
version = "0.1.0"
edition = "2021"
description = "Thin contract crate: traits + types for lance-graph consumers (ladybug-rs, crewai-rust, n8n-rs)"
license = "Apache-2.0"
keywords = ["lance", "graph", "contract", "orchestration", "thinking"]
build = "build.rs"

[dependencies]
# Zero dependencies by design — this is a trait-only crate.
# Consumers depend on this; implementations depend on lance-graph-planner.

[build-dependencies]
# serde_yaml: used ONLY in build.rs to parse modules/*/manifest.yaml.
# This does NOT become a runtime dep of the crate.
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }
glob = "0.3"

[dev-dependencies]
# Used in manifest_codegen tests to replicate validation logic in-process.
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }
# D-CSV-13b: criterion bench scaffold for i4_eval::batch SIMD dispatch.
# Matches version used in crates/lance-graph-benches/Cargo.toml.
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }

[[bench]]
name = "i4_batch"
harness = false

[features]
# A-unlock-stepdomain — `step_trajectory_hash` forward stub for the E4
# cross-PR bridge between PR #278 audit log + PR #279 grammar trajectory.
# No-op alias today; concrete impl lands once the bridge PR ships.
trajectory-audit = []

# guid-v2-tail (D-GV2-1, plan: guid-v2-tail-per-family-codebook-v1.md) — the v2
# basin tail leaf(u16)·family(u16)·identity(u16) replacing v1 family(u24)·
# identity(u24), leaf as the 4th HHTL tier. Default OFF; additive v2 accessors
# (`leaf`/`*_v2`) coexist with v1 until cutover (D-GV2-5). Layout reclaim →
# I-LEGACY-API-FEATURE-GATED (field-isolation matrix + version gate).
guid-v2-tail = []
